--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,11 @@
     background-size: cover;
     background-position: center center;
 }
+
+.picture {
+    height: 400px;
+    background-image: url('../img/hero.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
